[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Create, read and write JSON-encoded config files."
documentation = "https://docs.rs/config_file_handler"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "config_file_handler"
readme = "README.md"
repository = "https://github.com/maidsafe/config_file_handler"
version = "0.8.3"
edition = "2018"

[dependencies]
dirs = "~2.0.0"
fs2 = "~0.4.3"
lazy_static = "~1.3.0"
quick-error = "~1.2.2"
serde = "~1.0.91"
serde_json = "~1.0.39"
unwrap = "~1.1.0"
